first time deployed

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=chatbot
 
 spring.ai.vertex.ai.gemini.projectId=${VERTEX_PROJECT_ID}
 spring.ai.vertex.ai.gemini.location=${VERTEX_LOCATION}
+
+#const API_BASE_URL = "http://localhost:8080";
+
+const API_BASE_URL = "https://chatbot-925708659658.europe-west4.run.app";
